# cpp-Collections-Assignment

./: CMakeLists.txt  Makefile  README.md  players.txt
model/: .board.h.swp  board.cpp  board.h  board_BACKUP_1811.h  checker.cpp  checker.h  fileio.cpp  fileio.h  king.cpp  king.h  model.cpp  model.h  player.cpp  player.h  players.cpp  players.h  players_statics.cpp  players_statics.h
ncview/: game_window.cpp  ui.cpp
